kubernetes/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-flights-deployment
  labels:
    app: open-flights
spec:
  replicas: 3  # Number of desired replicas (adjust as needed)
  selector:
    matchLabels:
      app: open-flights
  template:
    metadata:
      labels:
        app: open-flights
    spec:
      containers:
      - name: open-flights
        image: 150387322390.dkr.ecr.ap-south-1.amazonaws.com/employee-performance-prod:prod-img-v1.16 # Replace with your Docker image details
        ports:
        - containerPort: 3000  # Port your application is listening on
